# timetracker

./: CMakeLists.txt  CMakeLists.txt.user.344cf33  README.md  analysisdialog.cpp  analysisdialog.h  analysisdialog.ui  event.h  eventdialog.cpp  eventdialog.h  eventdialog.ui  histogramwidget.cpp  histogramwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
